homework-01/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework01-service
spec:
  type: NodePort
  selector:
    component: homework01
  ports:
    - protocol: TCP
      port: 8081
